--- a/Clash-Full.ini
+++ b/Clash-Full.ini
@@ -1,5 +1,5 @@
 ;1、域名组
-ruleset=DIRECT,https://raw.githubusercontent.com/BRSBSC/nodnsleak/refs/heads/main/SourceIP.list
+ruleset=➡️ 国内,https://raw.githubusercontent.com/BRSBSC/nodnsleak/refs/heads/main/SourceIP.list
 ruleset=✨ AI,https://raw.githubusercontent.com/brsbsc/clash/refs/heads/main/list/AI.list
 ruleset=✨ AI,https://raw.githubusercontent.com/brsbsc/clash/refs/heads/main/list/AI2.list
 ruleset=📘 GitHub,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/GitHub/GitHub.list
